<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".DetailActivity"
    tools:showIn="@layout/activity_detail">
  <LinearLayout
      android:layout_marginTop="50dp"
      android:id="@+id/linear_filename"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      android:layout_width="match_parent"
      android:orientation="horizontal"
      android:layout_height="wrap_content">
<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:textSize="18sp"
    android:padding="10dp"
    android:text="@string/Filename"/>
      <TextView
          android:id="@+id/tv_filename"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:textSize="18sp"
          android:padding="10dp"
          android:layout_gravity="center"
          android:gravity="center"
          android:text="@string/status"/>

  </LinearLayout>
    <LinearLayout
        android:layout_marginTop="50dp"
        android:id="@+id/linear_fileStatus"
        app:layout_constraintTop_toTopOf="@+id/linear_filename"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:padding="10dp"
            android:text="@string/status"/>
        <TextView
            android:id="@+id/tv_file_status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:padding="10dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/status"/>
    </LinearLayout>
    <Button
        android:id="@+id/detail_button"
        android:background="@color/colorAccent"
        android:text="@string/ok"
        android:textSize="28sp"
        android:textAppearance="@style/TextAppearance.AppCompat.Large.Inverse"
        app:layout_constraintBottom_toBottomOf="parent"
        style="@style/button" />

</androidx.constraintlayout.widget.ConstraintLayout>